@@ -10,6 +10,9 @@ Revision history for Perl extension RPi::WiringPi.
         - re-enabled t/42 for interrupt both
         - updated FAQ unit test section with a blurb about the HCSR04
           ultra-sonic distance sensor
+        - removed assignment of pin objects where it wasn't really necessary, we
+          were just using them for registration purposes; these calls are now
+          void
 
 2.3620  2017-07-13
         - worked around issue where bbdispatch/brewbuild was causing havoc on
